--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">  
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">	
 	<head>		
 		<title>Pub4me</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-  		
-		<link rel="stylesheet" type="text/css" href="/site_media/pub4me.css"/>
+  	<link rel="stylesheet" type="text/css" href="/site_media/pub4me.css"/>
 		<script type="text/javascript" src="/site_media/pub4me.js"></script>		 
 	</head>
 	<body>
-		<div id="content">
-            {% block main_content %}
-
-			<div id="place">
-                {% if user_name %}
-                    <h1> Witaj {{user_name }} </h1><a href="logout/">Wyloguj</a>
-                {% endif %}
-				<h1>Nie wiesz gdzie iść wieczorem?</h1>
-				<p>Podaj swoją ulubioną knajpę, a znajdziemy ci Twoje nowe ulubione miejsce.</p>
-				<form id="find_place" action="#" method="post">				
+		<div class="container">
+			<div class="header">
+				<span class="right">
+				{% if user_name %}
+        	{{user_name }} <a href="logout/">Wyloguj</a>
+        {% endif %}
+				</span>
+			</div>
+			<div class="content">
+				{% block main_content %}
+				<h1>Nie wiesz gdzie iś wieczorem?</h1>
+				<p>Podaj swoją ulubioną knajpę, a znajdziemy ci Twoje nowe ulubione miejsce</p>
+				
+				<div id="place">
+          <form id="find_place" action="#" method="post">				
 					<div id="first_place">
 
 						<input id="place_id" type="hidden" name="place[id]" value="1" />
@@ -41,7 +45,16 @@
 				<p>Twoim nowym ulubionym miejscem jest <span id="result_place">Bomba</span></p>
 				<p><a id="next" href="">dawaj następną</a> | <a id="been" href="">byłem</a></p>									
 			</div>
-            {% endblock %}
+				
+				
+				
+				{% endblock %}
+			</div>
+			<div class="footer">
+				
+			</div>
+		</div>
+            
 		</div>	
 	</body>
 </html>
