- przeniesienie autentykacji i tworzenia uzytkownikow do aplikacji USERS   - przeniesienie widokow, testow i url do odpowiednich plikow w nowej aplikacji   - odpowiednie modyfikacje w template'ach

--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -17,7 +17,7 @@
 
 			<div id="place">
                 {% if user_name %}
-                    <h1> Witaj {{user_name }} </h1><a href="{% url PubsProject.pub4me.views.logout_view %}">Wyloguj</a>
+                    <h1> Witaj {{user_name }} </h1><a href="{% url PubsProject.users.views.logout_view %}">Wyloguj</a>
                 {% endif %}
 				<h1>Nie wiesz gdzie iść wieczorem?</h1>
 				<p>Podaj swoją ulubioną knajpę, a znajdziemy ci Twoje nowe ulubione miejsce.</p>
