--- a/src/PubsProject/site_media/pub4me.css
+++ b/src/PubsProject/site_media/pub4me.css
@@ -27,6 +27,10 @@ ol, ul {
 
 /* end of reset.css */
 
+body {
+	font-family: Arial,Helvetica,Helvetica Neue,Verdana,sans-serif;
+}
+
 .right {
 	float: right;
 }
@@ -36,71 +40,40 @@ ol, ul {
 	width: 960px;
 }
 
-
-
-body {
-}
-
 h1 {
-    font-size: 28pt;
-    line-height: 1.2;
-    margin-bottom: 10px;
+	font-size: 28pt;
+  line-height: 1.2;
+  margin-bottom: 10px;
 }
+
+.more {
+	clear: both;
+	float: left;
+	display: none;
+}
+
+.primary {
+	padding: 4px 20px;
+}
+
 
 p {
-    margin-bottom: 0.4em;
-}
-
-#content {
-    width: 700px;
-    margin: auto;
-}
-
-#place {
-    margin-top: 120px;
-    font-size: 1.2em;
-}
-
-form div {
-    margin-top: 10px;
+	margin-bottom: 1em;
 }
 
 input {
+		font-size: 1.2em;
     line-height: 1.5;
     padding: 0.2em 0.4em;
     font-size: inherit;
 }
 
 input.placename {
+		clear: both;
+		float: left;
     display: block;
-    padding: 0.2em 0.4em;
+    padding: 0.4em 0.4em;
     margin-right: 10px;
     width: 350px;
-}
-
-#place .place_result {
-    font-size: 1.2em;
-    color: blue;
-}
-
-#second_place {
-    display: none;
-}
-
-#second_place_name {
-    display: none;
-}
-
-#result {
-    padding: 20px;
-    font-size: 1.2em;
-    display: none;
-    margin-top: 20px;
-    padding: 20px;
-    border: 1px solid blue;
-}
-
-#result_place {
-    font-size: 200%;
-    font-weight: bold;
+		margin-bottom: 10px;
 }
