dodanie klasy ukrywającej remove link domyślny dla jquery.formsets

--- a/src/PubsProject/site_media/pub4me.css
+++ b/src/PubsProject/site_media/pub4me.css
@@ -46,9 +46,13 @@ h1 {
   margin-bottom: 10px;
 }
 
-.more {
+.addformlink {
 	clear: both;
 	float: left;
+}
+
+.removeformlink {
+	display: none;
 }
 
 .primary {
