--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -5,21 +5,11 @@
 		<title>Pub4me</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>
-		<script type="text/javascript" src="/site_media/jquery.formset.js"></script> 
+		<script type="text/javascript" src="/site_media/jquery.formset.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script> 
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
   	<link rel="stylesheet" type="text/css" href="/site_media/pub4me.css"/>
 		<script type="text/javascript" src="/site_media/pub4me.js"></script>
-		<script type="text/javascript">
-    	$(function() {
-        $('form.pubs div').formset({
-					addText: '+ dodaj kolejną',
-					addCssClass: 'addformlink',
-					deleteCssClass: 'removeformlink',
-					prefix: '{{ formset.prefix }}'
-        })
-    	})
-   	</script>		 
 	</head>
 	<body>
 		<div class="container">
@@ -42,7 +32,7 @@
 				
 				{{ formset.management_form }}
 					{% for form in formset.forms %}	
-					<div id="{{form.prefix}}" class="pub_field">	
+					<div id="{{formset.prefix}}" class="pub_field">	
 						{% for field in form %} 
 	            {{ field }}
 						{% endfor %}												
