--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -18,11 +18,11 @@
 			<div class="header">
 				<span class="right">
 				{% if user_name %}
-        			{{user_name }} <a href="logout/">wyloguj</a>
+        			{{user_name }} <a href="/logout/">wyloguj</a>
 				{% else %}
-					<a href="facebook">połącz z Facebookiem</a> |
-					<a href="sign">załóż konto</a> |
-					<a href="accounts/login">zaloguj</a>
+					<a href="/facebook">połącz z Facebookiem</a> |
+					<a href="/sign">załóż konto</a> |
+					<a href="/accounts/login">zaloguj</a>
         		{% endif %}
 				</span>
 			</div>
