Dodanie informacji o stworzeniu nowego miejsca przy wpisaniu miejsca, które nie istnieje w bazie.

--- a/src/PubsProject/site_media/pub4me.css
+++ b/src/PubsProject/site_media/pub4me.css
@@ -55,6 +55,12 @@ h1 {
 	display: none;
 }
 
+.notify {
+	display: none;
+	clear: left;
+	float: left;
+}
+
 .primary {
 	widht: 200px;
 	display: block;
