Wersja beta algorytmu podpowiadajacego recommendation.py, pelny data flow z wyswieltaniem listy wynikow na strone

--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -49,6 +49,11 @@
 				
 				{% endblock %}							
 			</div>
+			<div>
+				<ul id="recommendList">
+					
+				</ul>
+			</div>
 														
 			<div class="footer">
 				
