--- a/src/PubsProject/templates/pub4me/facebook_canvas.html
+++ b/src/PubsProject/templates/pub4me/facebook_canvas.html
@@ -3,9 +3,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">	
 	<head>		
 		<script type="text/javascript">
+  			var _gaq = _gaq || [];
+  			_gaq.push(['_setAccount', 'UA-20977404-2']);
+  			_gaq.push(['_setDomainName', '.mingle.pl']);
+  			_gaq.push(['_trackPageview']);
+			(function() {
+    			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  			})();
+		</script>
+		<script type="text/javascript">
 			parent.location = '{{redirect_link}}';	
 		</script>
-		
 	</head>
 	<body>
 	</body>
