--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -10,6 +10,18 @@
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
   	<link rel="stylesheet" type="text/css" href="/site_media/pub4me.css"/>
 		<script type="text/javascript" src="/site_media/pub4me.js"></script>
+		
+		<script type="text/javascript">
+  			var _gaq = _gaq || [];
+  			_gaq.push(['_setAccount', 'UA-20977404-2']);
+  			_gaq.push(['_setDomainName', '.mingle.pl']);
+  			_gaq.push(['_trackPageview']);
+			(function() {
+    			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  			})();
+		</script>
 	</head>
 	<body>
 
