--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -2,7 +2,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">  
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">	
 	<head>		
-		<title>Pub4me</title>
+		<title>Pub4me - Hell yeah, GIT działa :)</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
 		<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
 		<script type="text/javascript" src="/site_media/jquery.formset.js"></script>
