--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -4,12 +4,12 @@
 	<head>		
 		<title>Pub4me - Hell yeah, GIT działa :)</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js"></script>
-		<script type="text/javascript" src="/site_media/jquery.formset.js"></script>
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script> 
+		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script> 
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>		
 		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-  	<link rel="stylesheet" type="text/css" href="/site_media/pub4me.css"/>
-		<script type="text/javascript" src="/site_media/pub4me.js"></script>
+  		<link rel="stylesheet" type="text/css" href="/site_media/pub4me.css"/>
+  		<script type="text/javascript" src="/site_media/jquery.tokeninput.js"></script>
+		<link rel="stylesheet" type="text/css" href="/site_media/token-input.css" />	
 		
 		<script type="text/javascript">
   			var _gaq = _gaq || [];
@@ -21,6 +21,16 @@
     			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
     			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   			})();
+		</script>
+		
+		<script type="text/javascript">
+			$(document).ready(function () {
+			    $("#pubs_input").tokenInput("/pub_autocomplete", {
+			    	onAdd: function (item) {
+			    		alert("Added " + item.id + item.name);
+			    	}
+			    });
+			});
 		</script>
 	</head>
 	<body>
@@ -45,20 +55,13 @@
 
 				<h1>Nie wiesz gdzie iść wieczorem?</h1>
 				<p>Podaj swoją ulubioną knajpę, a znajdziemy ci Twoje nowe ulubione miejsce.</p>
-				
 				<form id="pubs_form" class="pubs" action="/pub_recommend" method="post">
-				{% csrf_token %}								
-				{{ formset.management_form }}
-					{% for form in formset.forms %}	
-					<div class="pub_field">	
-						{% for field in form %} 
-	            {{ field }}							
-						{% endfor %}
-						<div class="notify">New place!</div>																
-					</div>													
-	       {% endfor %}
-				 <a href="/pub_recommend" class="primary" rel="pubs_form">Poka wyniki!</a>				 
+					<input type="text" id="pubs_input" name="pubs" />
 				</form>
+				
+					
+				 <a href="/pub_recommend" class="primary" rel="pubs_form">Poka wyniki!</a>				 
+				
 				
 				{% endblock %}							
 			</div>
