bug fixy dla: -server error przy dodawaniu nowych knajp -wielokrotne dodawanie wczesniej dodanych knajp (chociaz to jest brzydkim hackiem obsluzone :/ )

--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -29,6 +29,7 @@
 			$(document).ready(function () {
 								
 			    $("#pubs_input").tokenInput("/pub_autocomplete", {
+			    	preventDuplicates: true,
 			    	onAdd: function (item) {
 						$.ajax({
 							type: "POST",
