Dodana klasa CSS token-new-place-added oraz wybieranie jej dla nowo utworzonych knajp

--- a/src/PubsProject/site_media/token-input.css
+++ b/src/PubsProject/site_media/token-input.css
@@ -112,3 +112,6 @@ div.token-input-dropdown ul li.token-input-selected-dropdown-item {
     background-color: #d0efa0;
 }
 
+li.token-new-place-added {
+	background-color: #9900CC;
+}
