--- a/src/PubsProject/site_media/main.css
+++ b/src/PubsProject/site_media/main.css
@@ -28,7 +28,7 @@ ol, ul {
 /* end of reset.css */
 
 body {
-	font-family: Arial,Helvetica,Helvetica Neue,Verdana,sans-serif;
+	font-family: Arial;
 	background: #a4fbee;
 }
 
