--- a/src/PubsProject/site_media/main.css
+++ b/src/PubsProject/site_media/main.css
@@ -42,6 +42,22 @@ body {
 	margin-bottom: 25px;
 }
 
+.links {
+	height: 100%;
+	width: 495px;
+	margin: 0 auto;
+	padding: 7px;
+	text-align: right;
+	font-size: 12px;
+	color: #fff; 
+}
+
+.links a {
+	color: #fff;
+	text-decoration: none;
+}
+
+
 .content {
 	width: 495px;
 	margin: auto auto;
