--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -82,15 +82,13 @@
 		<div class="container">
 			
 			<div class="header">
-				<span class="right">
+				<div class="links">
 				{% if user_name %}
         			{{user_name }} <a href="/logout/">wyloguj</a>
 				{% else %}
-					<a href="/facebook">połącz z Facebookiem</a> |
-					<a href="/sign">załóż konto</a> |
-					<a href="/accounts/login">zaloguj</a>
+					<a href="/facebook">zaloguj</a>
         		{% endif %}
-				</span>
+				</div>
 			</div>
 			
 			<div class="content">
