--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -4,15 +4,15 @@
 	<head>		
 		<title>Mingle.pl - new places to love in Kraków</title>
 		<meta http-equiv="content-type" content="text/html;charset=utf-8" />
-		<script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.min.js"></script> 
-		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js"></script>		
-		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
+		<script type="text/javascript" src="/site_media/jquery-1.7.1.min.js"></script> 
+		<script type="text/javascript" src="/site_media/jquery-ui.min.js"></script>		
+		<link href="/site_media/jquery-ui.css" rel="stylesheet" type="text/css"/>
   		<link rel="stylesheet" type="text/css" href="/site_media/main.css"/>
   		<script type="text/javascript" src="/site_media/jquery.tokeninput.js"></script>
 		<link rel="stylesheet" type="text/css" href="/site_media/token-input.css" />
 		<link rel="stylesheet" type="text/css" href="/site_media/token-input-facebook.css" />
-		<script type="text/javascript" src="https://raw.github.com/zachstronaut/jquery-animate-css-rotate-scale/master/jquery-animate-css-rotate-scale.js"></script>
-		<script type="text/javascript" src="https://raw.github.com/zachstronaut/jquery-css-transform/master/jquery-css-transform.js"></script>
+		<script type="text/javascript" src="/site_media/jquery-animate-css-rotate-scale.js"></script>
+		<script type="text/javascript" src="/site_media/jquery-css-transform.js"></script>
 		
 		<script type="text/javascript">
   			var _gaq = _gaq || [];
