--- a/src/PubsProject/templates/pub4me/index.html
+++ b/src/PubsProject/templates/pub4me/index.html
@@ -140,6 +140,9 @@
 				{% block main_content %}
 				
 				<h1 class="logo"><img src="/site_media/logo.png" alt="mingle. new places to love" /></h1>
+				<div class="current-city">
+					Kraków
+				</div>
 				<h2 class="hint"><img src="/site_media/hint.png" alt="Wpisz miejsca do których chodzisz. Podpowiemy Ci nowe ulubione." /></h2>
 				
 				<form id="pubs_form" class="pubs" action="/pub_recommend" method="post">
